# hw04-Group27

./: .buildinfo  .gitignore  LOSC_Event_tutorial.html  Makefile  README.html  _config.yml  _toc.yml  contribution_statement.html  genindex.html  hw04_description.html  index.html  objects.inv  references.bib  requirements.txt  search.html  searchindex.js  setup.cfg
_sources/: README.md  contribution_statement.md
ligotools/: __init__.py  utils.py
ligotools/test/: test_readligo.py  test_utils.py
