[metadata]
name             = hw04-Group27
version          = attr: hw04-Group27.__version__
author           = Ligo Scientific Collaboration (LSC) and Group 27 (Jeffrey Fan, Leah Hong, Janise Liang, Nick Melamed)
author_email     = jeffreyfan8888@berkeley.edu, leah6519@berkeley.edu, janise@berkeley.edu, nickmelamed@berkeley.edu
description      = LIGO Reproducible Research
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords         = tools, ligo
license          = BSD 3-Clause License
classifiers      =
	Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
# These should be consistent with what is specified in the environment.yml
python_requires  = >= 3.6,
install_requires =
	tqdm

[options.packages.find]
exclude =
    examples*
    docs*